--- a/templates/template_mirador.html
+++ b/templates/template_mirador.html
@@ -108,7 +108,7 @@
                     "userButtons": [
                         {
                             "label": '<i18n:text key="worksList"/>',
-                            "iconClass": "fa fa-th-list",
+                            "iconClass": "fa fa-file",
                             "attributes": {
                                 "id": "works",
                                 "aria-hidden": "true",
