--- a/resources/css/style_default.css
+++ b/resources/css/style_default.css
@@ -734,7 +734,7 @@ border:none
  * - fa fa-file-alt
  * - fa fa-file (legacy works icon, Mirador)
  * - fa fa-group
- * - far fa-hand-pointer-right
+ * - far fa-hand-point-right
  * - fa fa-info-circle
  * - fa fa-list-ul
  * - fa fa-balance-scale
