--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -602,6 +602,10 @@ a .original {
     position:absolute;
 }
 
+span.blankPage {
+    display:block;
+}
+
 span.label-inline {
     display:block;
     text-align:center;
