Mark gaps in reading view

--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -602,6 +602,12 @@ a .original {
     position:absolute;
 }
 
+span.gap:after {
+    content: '[…]';
+    color:gray;
+    font-size:70%;
+}
+
 span.blankPage {
     display:block;
 }
