--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -549,8 +549,9 @@ a .edited, a .expan, a .reg, a .corr{
 	margin-right: -51%;
 	padding: 5px;
 	line-height: 1.6;
-    font-size: 0.8em;
-    font-style: normal;
+    font-size: 20px !important; 
+    font-style: normal !important;
+    font-weight: normal !important;
 	text-indent: 0;
 	text-align: justify;
 	width:45%;
