Small layout fixes

--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -502,7 +502,7 @@ a .edited, a .expan, a .reg, a .corr{
     font-size:23px;
 }
 
-.messengers .fa-link {
+.fa-link {
 /*    font-size:unset;*/
     font-size:18px;
 }
