--- a/templates/template_work.html
+++ b/templates/template_work.html
@@ -379,10 +379,14 @@
             // Make input tag on-the-fly: get pre-rendered work/passage citation strings and insert the current date
             function citeToggle(elem) {
                 var target = elem.parentElement.getElementsByClassName('sal-cite-toggle')[0];
-                if (target.getElementsByTagName('input').length &gt; 0) {
-                    target.removeChild(target.getElementsByTagName('input')[0]); // there can maximally be one input tag
+                //if (target.getElementsByTagName('input').length &gt; 0) {
+                //    target.removeChild(target.getElementsByTagName('input')[0]); // there can maximally be one input tag
+                //}
+                if (target.getElementsByTagName('textarea').length &gt; 0) {
+                    target.removeChild(target.getElementsByTagName('textarea')[0]); // there can maximally be one textarea tag
                 }
-                var input = document.createElement('input');
+                //var input = document.createElement('input');
+                var input = document.createElement('textarea');
                 var v1 = target.getElementsByClassName('cite-rec-body')[0].textContent;
                 var v2 = getI18nAccessString();
                 var v3;
@@ -391,18 +395,21 @@
                 } else {
                     v3 = '';
                 }
-                input.setAttribute('value', v1 + ' ' + v2 + v3);
-                input.setAttribute('type', 'text');
-                input.setAttribute('class', 'sal-cite-text');
+                //input.setAttribute('value', v1 + ' ' + v2 + v3);
+                //input.setAttribute('type', 'text');
+                input.setAttribute('class', 'sal-cite-input');
+                input.setAttribute('rows', '3')
+                
+                input.textContent = v1 + ' ' + v2 + v3;
                 var button = target.getElementsByTagName('button')[0];
                 target.insertBefore(input, button);
             }
             function citeCopy(elem) {
                 var p = elem.parentElement;
-                var input = p.getElementsByTagName('input')[0];
+                var input = p.getElementsByTagName('textarea')[0];
                 input.select();
                 document.execCommand("copy");
-                alert("Copied the text: " + input.value);
+                //alert("Copied the text: " + input.value);
             }
             $('.sal-cite-toggle').width('400px');
             function getI18nAccessString() {
