Fix appending of passage trails

--- a/templates/template_work.html
+++ b/templates/template_work.html
@@ -407,7 +407,7 @@
                 input.setAttribute('class', 'sal-cite-input');
                 input.setAttribute('rows', '3')
                 
-                input.textContent = v1 + ' ' + v2 + v3;
+                input.textContent = v1 + ' ' + v2 + ',' + v3;
                 var button = target.getElementsByTagName('button')[0];
                 target.insertBefore(input, button);
             }
