--- a/templates/template_work.html
+++ b/templates/template_work.html
@@ -226,7 +226,6 @@
                     content: function(){return $(this).siblings('.sal-toolbox-body').html()}
                     // close popup by clicking outside
                 }).click(function(event) {event.preventDefault();});
-                $('.sal-cite-toggle').width('400px');
                 
                 // 2. Refresh ImageViewer Stuff...
                 $(".pageNo").click(function(event){
@@ -381,19 +380,25 @@
             });
         </script>
         
-        <!-- Passage citation references -->
+        <!-- Toolboxes: copy link and citation reference -->
         <script type="text/javascript">
-            // Make input tag on-the-fly: get pre-rendered work/passage citation strings and insert the current date
-            function citeToggle(elem) {
-                var target = elem.parentElement.getElementsByClassName('sal-cite-toggle')[0];
-                //if (target.getElementsByTagName('input').length &gt; 0) {
-                //    target.removeChild(target.getElementsByTagName('input')[0]); // there can maximally be one input tag
-                //}
-                if (target.getElementsByTagName('textarea').length &gt; 0) {
-                    target.removeChild(target.getElementsByTagName('textarea')[0]); // there can maximally be one textarea tag
-                }
-                //var input = document.createElement('input');
+            function copyLink(elem) {
+                var target = elem.parentElement.getElementsByClassName('cite-link')[0];
                 var input = document.createElement('textarea');
+                input.setAttribute('style', 'display:block; width:0; height:0; opacity: 0;'); // hidden
+                input.textContent = target.textContent;
+                document.body.appendChild(input);
+                input.select();
+                document.execCommand('copy');
+                //alert("Copied: " + input.textContent);
+                //elem.setAttribute('title', 'Copied to clipboard!');
+                document.body.removeChild(input);
+            }
+            function copyCitRef(elem) {
+                var target = elem.parentElement.getElementsByClassName('sal-cite-rec')[0];
+                var input = document.createElement('textarea');
+                input.setAttribute('style', 'display:block; width:0; height:0; opacity: 0;');
+                // construct string to be copied: get pre-rendered work/passage citation strings and insert the current date
                 var v1 = target.getElementsByClassName('cite-rec-body')[0].textContent;
                 var v2 = getI18nAccessString();
                 var v3;
@@ -402,23 +407,13 @@
                 } else {
                     v3 = '';
                 }
-                //input.setAttribute('value', v1 + ' ' + v2 + v3);
-                //input.setAttribute('type', 'text');
-                input.setAttribute('class', 'sal-cite-input');
-                input.setAttribute('rows', '3')
-                
-                input.textContent = v1 + ' ' + v2 + ',' + v3;
-                var button = target.getElementsByTagName('button')[0];
-                target.insertBefore(input, button);
-            }
-            function citeCopy(elem) {
-                var p = elem.parentElement;
-                var input = p.getElementsByTagName('textarea')[0];
+                input.textContent = v1 + ' ' + v2 + ', ' + v3;
+                document.body.appendChild(input);
                 input.select();
-                document.execCommand("copy");
-                //alert("Copied the text: " + input.value);
+                document.execCommand('copy');
+                //alert("Copied: " + input.textContent);
+                document.body.removeChild(input);
             }
-            $('.sal-cite-toggle').width('400px');
             function getI18nAccessString() {
                 var accessed;
                 var date;
